<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    tools:context=".DetailUser">

    <ImageView
        android:id="@+id/icon_user"
        android:layout_width="274dp"
        android:layout_height="273dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/user_s_pict"
        android:scaleType="center" />

    <TextView
        android:id="@+id/usernamenya"
        android:layout_width="152dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="298dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/njos"
        android:textAppearance="@style/text" />

    <TextView
        android:id="@+id/namenya"
        android:layout_width="122dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="332dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/josi"
        android:textAppearance="@style/text" />

    <Button
        android:id="@+id/followernya"
        android:layout_width="65dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="380dp"
        android:text="@string/followers"
        android:background="@drawable/ellipse_5" />

    <Button
        android:id="@+id/followingnya"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/following"
        android:layout_marginStart="251dp"
        android:layout_marginTop="380dp"
        android:background="@drawable/ellipse_25" />

    <TextView
        android:id="@+id/company"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="523dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/company_"
        android:textAppearance="@style/text" />

    <TextView
        android:id="@+id/mycompany"
        android:layout_width="152dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="190dp"
        android:layout_marginTop="524dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/github_inc"
        android:textAppearance="@style/text" />

    <TextView
        android:id="@+id/location"
        android:layout_width="152dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="563dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/location_"
        android:textAppearance="@style/text" />

    <TextView
        android:id="@+id/mylocation"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="191dp"
        android:layout_marginTop="562dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/indonesian"
        android:textAppearance="@style/text" />


    <LinearLayout
        android:id="@+id/kedua"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="646dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/repo"
            android:layout_width="66dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="110dp"
            android:background="@drawable/repo"
            android:contentDescription="@string/repository" />

        <TextView
            android:id="@+id/repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="14dp"
            android:gravity="center"
            android:text="@string/repository"
            android:textAppearance="@style/text"
            android:textColor="@android:color/black"

            />

    </LinearLayout>

</RelativeLayout>

