<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_github"
    android:layout_width="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:paddingBottom="30dp"
    android:background="#000000"
    android:focusable="true">

    <ImageView
        android:id="@+id/images_1_2"
        android:layout_width="133dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        tools:src="@drawable/logo"
        android:contentDescription="@string/user_s_pict"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/username"
        android:layout_width="152dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="176dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal|center_vertical"
        android:maxLines="2"
        android:text="@string/njos"
        android:textAppearance="@style/text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="176dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal|center_vertical"
        android:maxLines="2"
        android:text="@string/josi"
        android:textAppearance="@style/text"
        android:textSize="14sp" />

    <Button
        android:id="@+id/follower"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="202dp"
        android:layout_marginTop="118dp"
        android:background="@drawable/ellipse_5"
        android:text="@string/followers" />

    <Button
        android:id="@+id/following"
        android:layout_width="36dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="283dp"
        android:layout_marginTop="119dp"
        android:background="@drawable/ellipse_25"
        android:text="@string/following" />


</RelativeLayout>